iac/argocd/clusters/kcs/kustomize/gateway/reference-grant.yaml
# ReferenceGrant - Allow Gateway in istio-ingress to reference cert-manager secrets
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-secret-reference
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: istio-ingress
  to:
    - group: ""
      kind: Secret
      name: wildcard-kcs-example-com-tls
