iac/argocd/clusters/kcs/kustomize/gateway/http-redirect.yaml
# HTTP to HTTPS Redirect
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: istio-ingress
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-ingress
      sectionName: http
  hostnames:
    - "*.mesh-k8s.example.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
