iac/argocd/clusters/kcs/kustomize/gateway/httproute-argocd.yaml
# HTTPRoute for ArgoCD
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - argocd.mesh-k8s.example.com
  rules:
    - backendRefs:
        - name: argocd-server
          port: 443
