iac/argocd/clusters/kcs/kustomize/gateway/httproute-oauth2-proxy.yaml
# HTTPRoute for OAuth2-Proxy
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  parentRefs:
    - name: main-gateway
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - oauth2-proxy.mesh-k8s.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - name: oauth2-proxy
          port: 80
